--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "App to create public and private stories",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node app",
-    "dev": "SET NODE_ENV=development & nodemon app"
+    "start": "node app",
+    "dev": "SET NODE_ENV=development nodemon app"
   },
   "author": "Utsav Taliyan",
   "license": "MIT",
